tests/baselines/reference/genericLambaArgWithoutTypeArguments.errors.txt
==== tests/cases/compiler/genericLambaArgWithoutTypeArguments.ts (1 errors) ====
    interface Foo<T> {
       x: T;
    }
    function foo(a) {
       return null;
    }
    foo((arg: Foo) => { return arg.x; });
              ~~~
!!! genericLambaArgWithoutTypeArguments.ts(7,11): error TS2173: Generic type references must include all type arguments.
    